--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <div class="grid-container">
     <div class="header">
-      <h1>Degi:Portfolio</h1>
+      <h1>Degi:Portfolio </h1>
       <div class="img_about">
       </div>
     </div>
@@ -50,7 +50,7 @@
 
 
 
-  <div id="main">
+  <div class="main">
     <div id="startpage">
       <h2>
         <p>My Portfolio</p>
@@ -58,7 +58,6 @@
       </p>
       <p>Its Me !
       </p>
-
     </div>
 
     <div id="about">
@@ -73,44 +72,44 @@
     </div>
 
     <div id="projects">
-      <h2>
-        <p>Projects </p>
-      </h2>
+    <h2>
+      <p>Projects </p>
+    </h2>
+    </p>
+    <img src="/rec.jpg" alt="its me">
+    <div class="content">
+      <p>Recording</p>
+    </div>
+    <img src="/bunker.PNG" alt="picsec1">
+    <div class="content">
+      <p>
+      <h3>Band Projekte</h3>
       </p>
-      <img src="/rec.jpg" alt="its me">
-      <div class="content">
-        <p>Recording</p>
-      </div>
-      <img src="/bunker.PNG" alt="picsec1">
-      <div class="content">
-        <p>
-        <h3>Band Projekte</h3>
-        </p>
-      </div>
+    </div>
 
-      <img src="/picsec02.jpg" alt="its me">
-      <div class="content">
-        <p>
-        <h3>picture-section.de</h3>
-        </p>
-      </div>
-      
-      <div class="content_yt">
-        <iframe width="410" height="315" src="https://www.youtube.com/embed/4FQ2LxrYaMo" title="YouTube video player"
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen></iframe>
-      </div>
+    <img src="/picsec02.jpg" alt="its me">
+    <div class="content">
+      <p>
+      <h3>picture-section.de</h3>
+      </p>
+    </div>
+    
+    <div class="content_yt">
+      <iframe width="410" height="315" src="https://www.youtube.com/embed/4FQ2LxrYaMo" title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen></iframe>
+    </div>
 
-      <div id="links">
-        <p>
-        <h3>Event-Projects</h3>
-        </p>
-      </div>
+    <div id="links">
+      <p>
+      <h3>Event-Projects</h3>
+      </p>
+    </div>
 
-      <div class="left"></div>
-      <div class="right"></div>
-      <div class="footer"></div>
+    <div class="left"></div>
+    <div class="right"></div>
+    <div class="footer"></div>
 </body>
 
 </html>
