--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/css/reset.css">
   <link rel="stylesheet" href="/css/main.css">
+   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto&display=swap">
+    <script src="https://kit.fontawesome.com/3c09bcb51a.js"></script>
 
   <title>Portfolio by R.D.</title>
 </head>
@@ -28,12 +30,12 @@
           <div class="dropdown">
             <div class="dropbtn">
               <div class="dropdown-content"> 
-                <li><a href="#about">About</a></li>
-                <li><a href="#startpage">Portfolio</a></li>
+                <li><a href="#about">About </a></li>
+                <li><a href="#startpage">Portfolio </a></li>
                
-                <li><a href="#projects">Projects</a></li>
+                <li><a href="#projects">Projects </a></li>
                 
-                <li><a href="#links">Links</a>
+                <li><a href="#links">Links </a>
                 </li>
               </div>
 
