--- a/index.html
+++ b/index.html
@@ -78,6 +78,8 @@
         <p>Projects</p></h2>
       </p><h3>Audio & Video Production | 2005 - 2021</h3>
       <img src="/rec.jpg" alt="rec">
+      <a href="https://www.myownmusic.de/shaded/#songs">Shadedmusic
+         - Symphonic Rock Metal | Selfmade Production</a>
       
       <div class="content">
         <p>
