add vim portfolio

--- a/index.html
+++ b/index.html
@@ -70,15 +70,15 @@
         <p>My Portfolio</p>
       </h2>
       </p>
-      <p>Its Me !
-      </p>
+      <a href="https://vimninja.netlify.app/" target="_blank">VIM Ninja Belt: First HTML & CSS Layout</a>
+  
     </div>
     <div id="projects">
       <h2>
         <p>Projects</p></h2>
       </p><h3>Audio & Video Production | 2005 - 2021</h3>
       <img src="/rec.jpg" alt="rec">
-      <a href="https://www.myownmusic.de/shaded/#songs">Shadedmusic
+      <a href="https://www.myownmusic.de/shaded/#songs" target="_blank">Shadedmusic
          - Symphonic Rock Metal | Selfmade Production</a>
       
       <div class="content">
@@ -108,10 +108,10 @@
       <div id="links">
         <p>
         <h2>Links</h2></p>
-        <a href="#">D01- Site | Webdeverloper
-          <a href="#">DCI - Digital Carrier Institure | Bootcamp </a>
-          <a href="#">Vedder und Stockrahm | Altmetallrecycling</a>
-          <a href="#">Healthy Work | Unternehmsberatung </a>
+        <a href="https://d01.site/" target="_blank">D01- Site | Webdeverloper
+          <a href="https://digitalcareerinstitute.org/" target="_blank">DCI - Digital Carrier Institure | Bootcamp </a>
+          <a href="#" target="_blank">Vedder und Stockrahm | Altmetallrecycling</a>
+          <a href="#" target="_blank">Healthy Work | Unternehmsberatung </a>
 
         </a>
         </p>
@@ -120,9 +120,9 @@
       <div class="left"></div>
       <div class="right"></div>
       <div class="footer">
-        <a href="#" class="fa fa-facebook"></a>
-        <a href="#" class="fa fa-twitter"></a>
-        <a href="#" class="fa fa-youtube"></a>
+        <a href="http://www.facebook.com" class="fa fa-facebook" target="_blank"></a>
+        <a href="http://www.twitter.com" class="fa fa-twitter" target="_blank"></a>
+        <a href="http://www.youtube.com" class="fa fa-youtube" target="_blank"></a>
       </div>
 </body>
 
