--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <h2>Links</h2></p>
         <a href="https://d01.site/" target="_blank">D01- Site | Webdeverloper
           <a href="https://digitalcareerinstitute.org/" target="_blank">DCI - Digital Carrier Institure | Bootcamp </a>
-          <a href="https://onespace.netlify.app/" target="_blank">Coding-Pool by Edward</a>
+          <a href="https://onespace.netlify.app/" target="_blank">Onespace | Coding Pool by Edward</a>
           <a href="#" target="_blank">Vedder und Stockrahm | Altmetallrecycling</a>
           <a href="#" target="_blank">Healthy Work | Unternehmsberatung </a>
 
